tests/fixtures/typecheck/valid/ok_percent_and_call.sr
rule "EQ: Percent OK" in underlying:
    when abs(underlying.return_5m) < 0.2%:
        then annotate(note="quiet_market")

