tests/fixtures/typecheck/invalid/bad_verb_arg_type.sr
rule "EQ: Bad Verb Arg Type" in underlying:
    when true:
        then emit_signal(kind=0.7, reason="kind_should_be_string")
